--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,14 @@ plugins {
 	id "io.spring.dependency-management" version "1.0.9.RELEASE"
 	id "org.jetbrains.kotlin.jvm" version "1.3.61" apply false
 	id "org.jetbrains.kotlin.plugin.spring" version "1.3.61" apply false
+	id "org.openapi.generator" version "4.2.3" apply false
 	id "org.springframework.boot" version "2.2.5.RELEASE"
 }
 
 ext {
 
 	gradleWrapperVersion = "6.0.1"
+	openAPIGeneratorVersion = "4.2.3"
 
 	libs = [
 
@@ -34,6 +36,7 @@ repositories {
 apply from: "$rootDir/plugins/kotlin.gradle"
 
 apply from: "$rootDir/plugins/ides.gradle"
+apply from: "$rootDir/plugins/openapi.gradle"
 
 dependencies {
 
