--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,87 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
+		<buildHelper.version>3.0.0</buildHelper.version>
+		<gsonFire.version>1.8.3</gsonFire.version>
+		<jacksonDatabindNullable.version>0.1.0</jacksonDatabindNullable.version>
 		<java.version>1.8</java.version>
+		<jsr305.version>3.0.2</jsr305.version>
 		<kotlin.version>1.3.61</kotlin.version>
+		<oltu.version>1.0.1</oltu.version>
+		<openAPIGen.version>4.3.0</openAPIGen.version>
+		<retrofit.version>2.5.0</retrofit.version>
+		<springfox.version>2.8.0</springfox.version>
+		<swaggerAnnotations.version>1.5.22</swaggerAnnotations.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>jsr305</artifactId>
+			<version>${jsr305.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.retrofit2</groupId>
+			<artifactId>converter-gson</artifactId>
+			<version>${retrofit.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.retrofit2</groupId>
+			<artifactId>converter-scalars</artifactId>
+			<version>${retrofit.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.retrofit2</groupId>
+			<artifactId>retrofit</artifactId>
+			<version>${retrofit.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.gsonfire</groupId>
+			<artifactId>gson-fire</artifactId>
+			<version>${gsonFire.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>${swaggerAnnotations.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.oltu.oauth2</groupId>
+			<artifactId>org.apache.oltu.oauth2.client</artifactId>
+			<version>${oltu.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.oltu.oauth2</groupId>
+					<artifactId>common</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.openapitools</groupId>
+			<artifactId>jackson-databind-nullable</artifactId>
+			<version>${jacksonDatabindNullable.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
@@ -35,12 +108,32 @@
 	</dependencies>
 
 	<build>
+
 		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
+
 		<plugins>
+
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>${buildHelper.version}</version>
+				<executions>
+					<execution>
+						<id>add-source</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>${project.build.directory}/generated/openapi-code-client/src/main/java</source>
+								<source>${project.build.directory}/generated/openapi-code-server/src/main/java</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
+
 			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
 				<artifactId>kotlin-maven-plugin</artifactId>
@@ -59,6 +152,59 @@
 						<version>${kotlin.version}</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+
+			<plugin>
+				<groupId>org.openapitools</groupId>
+				<artifactId>openapi-generator-maven-plugin</artifactId>
+				<version>${openAPIGen.version}</version>
+				<executions>
+					<execution>
+						<id>band-client</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<inputSpec>${project.basedir}/src/main/resources/openapi/bands-api.yaml</inputSpec>
+							<output>${project.build.directory}/generated/openapi-code-client</output>
+							<generatorName>java</generatorName>
+							<apiPackage>org.openapi.band.client.api</apiPackage>
+							<modelPackage>org.openapi.band.client.model</modelPackage>
+							<configOptions>
+								<dateLibrary>java8</dateLibrary>
+								<library>retrofit2</library>
+							</configOptions>
+						</configuration>
+					</execution>
+					<execution>
+						<id>band-server</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<inputSpec>${project.basedir}/src/main/resources/openapi/bands-api.yaml</inputSpec>
+							<output>${project.build.directory}/generated/openapi-code-server</output>
+							<generatorName>spring</generatorName>
+							<apiPackage>org.openapi.band.server.api</apiPackage>
+							<modelPackage>org.openapi.band.server.model</modelPackage>
+							<configOptions>
+								<dateLibrary>java8</dateLibrary>
+								<hideGenerationTimestamp>true</hideGenerationTimestamp>
+								<interfaceOnly>true</interfaceOnly>
+								<java8>true</java8>
+								<performBeanValidation>false</performBeanValidation>
+								<serializableModel>true</serializableModel>
+								<useBeanValidation>true</useBeanValidation>
+								<useOptional>true</useOptional>
+							</configOptions>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
